# TodoRust

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_categories.sql  20240101000003_create_todos.sql  20240101000004_create_tags.sql  20240101000005_add_time_tracking.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  categories.rs  mod.rs  tags.rs  todos.rs  ws.rs
backend/src/middleware/: auth.rs
backend/src/models/: category.rs  mod.rs  tag.rs  todo.rs  user.rs
backend/src/routes/: mod.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: FocusTimer.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: BottomNav.tsx  Layout.tsx
frontend/src/hooks/: useCategories.ts  useGsap.ts  useKeepAlive.ts  useTodos.ts  useWebSocket.ts
frontend/src/pages/: CategoriesPage.tsx  DashboardPage-old.tsx  DashboardPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  TagsPage.tsx  TodosPage.tsx  WelcomePage.tsx
frontend/src/services/: api.ts  auth.service.ts  categories.service.ts  tags.service.ts  todos.service.ts  ws.service.ts
frontend/src/store/: auth.store.ts  gamification.store.ts  theme.store.ts
frontend/src/types/: index.ts
frontend/src/utils/: confetti.ts  index.ts  time.ts
(+6 files in other folders)
